--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@heroicons/react": "^1.0.6",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "firebase": "^9.14.0",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.4",
     "react-icons": "^4.6.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
