--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.10.14",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "firebase": "^9.14.0",
@@ -18,6 +21,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
     "react-icons": "^4.6.0",
+    "react-player": "^2.11.0",
+    "recoil": "^0.7.6",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
