--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.10.14",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "firebase": "^9.14.0",
